[tool.poetry]
name = "aurora-telegram"
version = "0.2.0"
description = "Um simples projeto para o Telegram"
authors = ["Eduardo Rs <rodrigueseduardo1966@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
