[tool.poetry]
name = "aurora-telegram"
version = "0.2.0"
description = "Um simples projeto para o Telegram"
authors = ["Eduardo Rs <rodrigueseduardo1966@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.19"
python-dotenv = "^0.19.2"
humanize = "^4.0.0"
pytz = "^2021.3"
paramiko = "^2.9.2"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
isort = "^5.10.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
py_version = "310"

[tool.mypy]
namespace_packages = "True"

[tool.yapf]
based_on_style = "facebook"
indent_width = 4
